tests/sksl/errors/MismatchedNumbersES3.glsl
### Compilation failed:

error: 17: type mismatch: '=' cannot operate on 'uint', 'float'
error: 18: type mismatch: '=' cannot operate on 'int', 'uint'
error: 19: type mismatch: '=' cannot operate on 'float', 'uint'
error: 20: type mismatch: '=' cannot operate on 'uint', 'int'
error: 21: type mismatch: '=' cannot operate on 'uint', 'float'
error: 22: type mismatch: '+' cannot operate on 'uint', 'float'
error: 23: type mismatch: '-' cannot operate on 'uint', 'float'
error: 24: type mismatch: '*' cannot operate on 'uint', 'float'
error: 25: type mismatch: '/' cannot operate on 'uint', 'float'
error: 26: type mismatch: '+' cannot operate on 'float', 'uint'
error: 27: type mismatch: '-' cannot operate on 'float', 'uint'
error: 28: type mismatch: '*' cannot operate on 'float', 'uint'
error: 29: type mismatch: '/' cannot operate on 'float', 'uint'
error: 30: type mismatch: '+' cannot operate on 'uint', 'float'
error: 31: type mismatch: '-' cannot operate on 'uint', 'float'
error: 32: type mismatch: '*' cannot operate on 'uint', 'float'
error: 33: type mismatch: '/' cannot operate on 'uint', 'float'
error: 34: type mismatch: '+' cannot operate on 'float', 'uint'
error: 35: type mismatch: '-' cannot operate on 'float', 'uint'
error: 36: type mismatch: '*' cannot operate on 'float', 'uint'
error: 37: type mismatch: '/' cannot operate on 'float', 'uint'
error: 38: type mismatch: '+' cannot operate on 'int', 'uint'
error: 39: type mismatch: '-' cannot operate on 'int', 'uint'
error: 40: type mismatch: '*' cannot operate on 'int', 'uint'
error: 41: type mismatch: '/' cannot operate on 'int', 'uint'
error: 42: type mismatch: '+' cannot operate on 'uint', 'int'
error: 43: type mismatch: '-' cannot operate on 'uint', 'int'
error: 44: type mismatch: '*' cannot operate on 'uint', 'int'
error: 45: type mismatch: '/' cannot operate on 'uint', 'int'
29 errors
